--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,22 @@
+.container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,250px);
+    grid-gap: 5px;
+    justify-content: center;
+}
 .item{
     border-radius: 5px;
     padding: 10px;
     background-color: #f2f2f2;
+
 }
 
 .item img{
-    max-width: 100%;;
-}
-
-.container{
-    display: grid;
-    grid-template-columns: repeat(3,250px);
-    grid-gap: 5px;
-    justify-content: center;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 .level-1{
