--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     border-radius: 5px;
     padding: 10px;
     background-color: #f2f2f2;
+    position: relative;
 
 }
 
@@ -18,7 +19,14 @@
     object-fit: cover;
     border-radius: 10px;
 }
+.item:hover .save{
 
+    display: block;
+    
+}
+.item:hover .post-overlay{
+   display: flex;
+}
 .level-1{
     grid-row-end: span 3; 
 }
@@ -27,4 +35,35 @@
 }
 .level-3{
     grid-row-end: span 1;
+}
+
+.save{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color:white;
+    display: none;
+    background-color: #e60023;
+    border-radius: 8px;
+    padding: 10px 14px;
+    font-weight: bold;
+    font-family: Arial;
+    letter-spacing: -.4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.post-overlay {
+    background: rgba(0,0,0, .4);
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    top: 10px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    letter-spacing: 1px;
+    text-align: center;
+    border-radius: 5px;
 }
